fix: record status tag alignment

--- a/plugins-structure/packages/common-ui/src/components/RecordCard/styles.module.css
+++ b/plugins-structure/packages/common-ui/src/components/RecordCard/styles.module.css
@@ -53,6 +53,7 @@
   align-items: center;
   justify-self: end;
   grid-area: rightHeader;
+  margin-top: 0.5rem;
   text-align: end;
 }
 
@@ -68,6 +69,8 @@
 
   .rightHeader {
     justify-self: start;
+    margin-top: 0;
+    margin-bottom: 0.5rem;
     text-align: start;
   }
 
